--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,18 +4,24 @@ server:
 spring:
   application:
     name: automec-finder
+
   profiles:
     active: dev
+
   data:
     mongodb:
       uri: mongodb://localhost:27017/automec-finder
 
-#    kafka:
-#        bootstrap-servers: localhost:9092
-#        listener:
-#            concurrency: 1
-#        consumer:
-#            topic: "dna"
-#            auto-offset-reset: earliest
-#            key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-#            value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+  kafka:
+      bootstrap-servers: localhost:9092
+      advertised:
+        host:
+          name: localhost
+        port: 9092
+      listener:
+          concurrency: 1
+      consumer:
+          topic: "user"
+          auto-offset-reset: earliest
+          key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+          value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
