--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,8 +10,7 @@ spring:
 
   data:
     mongodb:
-      uri: mongodb://localhost:27017/automec-finder
-
+      uri: mongodb://root:example@localhost:27017/automec-finder?authSource=admin
   kafka:
       bootstrap-servers: localhost:9092
       advertised:
